# metamind

./: .cursorrules  .gitignore  CURRENT_LOGS.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DSPY_EXAMPLES_STATUS.md  FRESH_EXTRACT_VS_EXISTING_METADATA_FIX.md  GOLDEN_DATASET_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  KB_STATUS_FIX.md  LLM_PROVIDER_SETUP.md  LOGGING_CLEANUP.md  LOGS_SETUP_COMPLETE.md  LOG_LOCATIONS.md  NEW_ARCHITECTURE_SUMMARY.md  QUICK_START_NEW_ARCHITECTURE.md  README.md  REFACTORING_SUMMARY.md  START_SERVICES.md  TABLE_VALIDATION_BEFORE_LLM.md  TABLE_VALIDATION_IMPLEMENTATION.md  TABLE_VALIDATION_IMPLEMENTATION_COMPLETE.md  TECHNICAL_ARCHITECTURE_REVIEW.md  UI_FIXES_TOGGLE_AND_KB_STATUS.md  dspy_examples.py  env.example  pyproject.toml  requirements.txt  restart_api.sh  restart_backend.sh  start_backend.sh  start_frontend.sh  start_services.sh  uv_setup.sh  view_backend_logs.sh
.cursor/: README.md  api-reference.md  architecture.md  development-guide.md  features.md
docs/: AUTHORIZATION.md  DEPLOYMENT_GUIDE.md  DOWNLOAD_BUTTONS_GUIDE.md  DSPY_EXAMPLES_GUIDE.md  DSPY_INTEGRATION_SUMMARY.md  EXECUTION_FLOW.md  FILES_ORGANIZATION.md  FRONTEND_DEBUG.md  FRONTEND_UI_DEBUG.md  KEY_FILES_GUIDE.md  MULTI_DASHBOARD_CONSOLIDATION_ANALYSIS.md  MULTI_DASHBOARD_IMPLEMENTATION_SUMMARY.md  MULTI_DASHBOARD_PROCESSING.md  PRISM_API_CLIENT_README.md  PROGRESS_TRACKING_AND_DOWNLOADS.md  QUICK_START.md  README.md  README_FRONTEND.md  README_UV.md  REORGANIZATION_SUMMARY.md  STARBURST_SCHEMA_FETCHER_README.md  STRUCTURE.md  SUMMARY.md  TROUBLESHOOTING.md  VERIFY_BUTTONS.md  (+5 more)
(+238 files in other folders)
