[project]
name = "superset-dashboard-extractor"
version = "1.0.0"
description = "Extract and visualize Superset dashboard metadata"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pandas>=2.1.3",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

